# SSIIntegratedDataPipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  sample.env  tsconfig.json
data_synthesizer/: Dockerfile  README.md  go.mod  go.sum  main.go  sample.env
grafana/: README.md
host_did_web/: Dockerfile  go.mod  (+4 more)
kafka_consumer/: Dockerfile  README.md  pyproject.toml  sample.env
kafka_consumer/app/: main.py
kafka_consumer/app/handlers/: kafka_consumer.py  kafka_event_handler.py  veramo_client.py
kafka_consumer/app/metrics/: metrics.py
kafka_consumer/app/utils/: settings.py
kafka_initialiser/: Dockerfile  README.md  pyproject.toml  sample.env
kafka_initialiser/app/: avro_schema_validator.py  constants.py  kafka_schema_manager.py  kafka_topic_manager.py  main.py  schema_loader.py  schema_registry_manager.py  utilities.py
kafka_initialiser/app/resources/avro/: health_sensor.avsc  trade_event.avsc  trades.avsc
kafka_initialiser/app/resources/avro/trade/: trade_data.avsc  trade_event.avsc
kafka_initialiser/app/resources/avro/trade/trade_credential/: credential_issuer.avsc  credential_proof.avsc  credential_subject.avsc  trade_data_credential.avsc
kafka_initialiser/scripts/: entryPoint.sh
kafka_producer/: Dockerfile  README.md  pyproject.toml  sample.env
kafka_producer/app/: main.py
kafka_producer/app/gather_data/: process_data.py  websocket_data_request.py
kafka_producer/app/handlers/: kafka_producer.py
kafka_producer/app/metrics/: metrics.py
kafka_producer/app/utils/: settings.py  utilities.py
kafka_producer/scripts/: entryPoint.sh
(+52 files in other folders)
